[package]
name = "pry"
version = "0.1.0"
edition = "2021"

[dependencies]
# hashbrown = "0.14" # drop-in hashmap replacement
# twox-hash = "1.6" # impl of Xxhash algorithm

combine = "4.6.6" # search query parsing (maybe other parsing, too)
unicode-segmentation = "1.10.1" # unicode sentences/words
sled = "0.34.7" # database of files
stop-words = "0.7.2" # tokenizing files
whichlang = "0.1.0" # language detection
# flood-tide = "0.2.10" # cmdline parser
# memmap2 = "0.7" # opening file into memory
# roaring = "0.10" # document id storage

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false

[profile.release]
lto = true
debug = false
debug-assertions = false
strip = true
